# nirs4all-repository

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSING.md  LICENSING_FR.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  deploy-pages.yml  docs.yml  publish.yml  version-guard.yml
LICENSES/: COMMERCIAL-LICENSE.md  COMMERCIAL-LICENSE_FR.md
catalog/: index.json
docs/: DESIGN.md  ROADMAP.md  SPECIFICATION.md  api.md  conf.py  getting_started.md  index.md  requirements.txt
pipelines/dagml_snv_pls/: card.md  descriptor.yaml  manifest.json  pipeline.json  ro-crate-metadata.json
pipelines/detrend_ridge/: card.md  descriptor.yaml  manifest.json  pipeline.json  ro-crate-metadata.json
pipelines/msc_pls/: card.md  descriptor.yaml  manifest.json  pipeline.json  ro-crate-metadata.json
pipelines/savgol_rf/: card.md  descriptor.yaml  manifest.json  pipeline.json  ro-crate-metadata.json
pipelines/snv_savgol_pls/: card.md  descriptor.yaml  manifest.json  pipeline.json  ro-crate-metadata.json
src/nirs4all_repository/: __init__.py  _version.py  bridge.py  builder.py  canonical.py  cli.py  evaluate.py  fetch.py  index.py  manifest.py  markdown_safe.py  recipes.py  scaffold.py  schema.py  security.py  settings.py  store.py  validate.py
src/nirs4all_repository/site/: __init__.py  assets.py  build.py
tests/: conftest.py  test_api.py  test_build.py  test_canonical.py  test_cli.py  test_markdown.py  test_recipes.py  test_schema.py  test_security.py  test_version.py
